--- a/DECASA/projeto/pom.xml
+++ b/DECASA/projeto/pom.xml
@@ -58,6 +58,14 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-vertx</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-undertow</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
